# raptorbakery

./: CMakeLists.txt  Makefile  README.md
attic/: Clean.py  Initial.py  Process.py  Session.py
attic/samples/harvest/: harvest.blend  harvest.blend1  harvest.mtl
libdata/python/: bake.py  clean.py  export.py  lighting.py  main.py
sample/bl1/: bl1.blend  bl1.mtl
sample/harvest/: harvest.blend  harvest.mtl
src/: Export.py  Import.py  Initial.py  Process.py  Session.py  stent.h
src/re/: Buffer.c  Buffer.h  Context.c  Context.h  Face.h  Mesh.c  Mesh.h  Renderer.c  Renderer.h  Shader.c  Texture.c  Texture.h  internal.c  internal.h  mathutil.c  mathutil.h  primitives.h  re.h  util.c  util.h
src/rpreview/: MaterialGroup.h  Model.c  Model.h  main.c
